# tari-cli

./: .gitignore  .license.ignore  Cargo.toml  Cross.toml  README.md  rustfmt.toml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: publish-if-new.sh
.github/workflows/: audit.yml  build_binaries.json  build_binaries.yml  ci.yml  docs-deploy.yml  pr-check.yml  pr_signed_commits_check.yml  publish-crates.yml  release.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: main.rs
crates/cli/src/cli/: arguments.rs  command.rs  config.rs  macros.rs  mod.rs  util.rs
crates/cli/src/cli/commands/: add.rs  build.rs  config.rs  create.rs  deploy.rs  generate.rs  init.rs  mod.rs  new.rs  publish.rs  wizard.rs
crates/cli/src/cli/commands/metadata/: mod.rs  publish.rs
crates/cli/src/cli/commands/template/: init_metadata.rs  inspect_metadata.rs  mod.rs  publish.rs
crates/cli/src/git/: mod.rs  repository.rs
crates/cli/src/project/: config.rs  mod.rs
crates/cli/src/templates/: collector.rs  models.rs
crates/publish_lib/: Cargo.toml  README.md
crates/publish_lib/src/: config.rs  deployer.rs  error.rs  lib.rs  publisher.rs  wasm_opt.rs
crates/tari_deploy/: Cargo.toml
crates/tari_deploy/src/: config.rs  deployer.rs  error.rs  lib.rs
crates/tari_deploy/src/uploader/: local.rs  mod.rs
docs/: README.md  astro.config.mjs  package.json  pnpm-lock.yaml
docs/01-getting-started/: installation.md  quick-start.md  workflow.md
docs/02-guides/: architecture.md  deployment.md  project-configuration.md  real-world-examples.md  template-development.md
docs/03-reference/: api-patterns.md  cli-commands.md  configuration-schema.md
docs/04-troubleshooting/: common-issues.md  debugging.md  faq.md
docs/05-contributing/: development-setup.md  testing.md
docs/src/components/: Pagination.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/guides/: installation.mdx  quick-start.mdx  template-metadata.mdx
docs/src/content/docs/reference/: add.mdx  create.mdx  publish.mdx  template-init.mdx  template-inspect.mdx  template-publish.mdx
docs/src/fonts/: font-face.css
scripts/: code_coverage.sh  cross_compile_ubuntu_18-pre-build.sh  file_license_check.sh  install_ubuntu_dependencies.sh  sign-hashes.sh
src/cli/: arguments.rs
src/cli/commands/: create.rs  new.rs
src/templates/: collector.rs
