[workspace]
members = ["crates/publish_lib", "crates/cli"]
resolver = "2"

[workspace.package]
version = "0.14.0"
edition = "2024"
authors = ["The Tari Development Community"]
repository = "https://github.com/tari-project/tari-cli"
license = "BSD-3-Clause"

[workspace.dependencies]
tari_ootle_publish_lib = { path = "crates/publish_lib", version = "0.14" }

tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.12"
url = { version = "2.5.3", features = ["default", "serde"] }

tari_ootle_walletd_client = "0.29"
tari_engine = "0.28"
tari_engine_types = "0.28"
tari_ootle_common_types = "0.28"
tari_template_lib_types = "0.24"
tari_ootle_template_metadata = "0.5"

# Temporary path overrides until the next coordinated Ootle release.
# All these crates transitively depend on tari_ootle_template_metadata;
# pointing them at the local repo ensures a single version (0.5).
[patch.crates-io]
tari_ootle_template_metadata = { path = "../dan/crates/template_metadata" }
tari_ootle_template_build = { path = "../dan/crates/template_build" }
tari_engine = { path = "../dan/crates/engine" }
tari_engine_types = { path = "../dan/crates/engine_types" }
tari_ootle_common_types = { path = "../dan/crates/common_types" }
tari_ootle_transaction = { path = "../dan/crates/transaction" }
tari_template_lib_types = { path = "../dan/crates/template_lib_types" }
tari_ootle_walletd_client = { path = "../dan/clients/wallet_daemon_client" }
tari_ootle_wallet_sdk = { path = "../dan/crates/wallet/sdk" }
tari_bor = { path = "../dan/crates/tari_bor" }
