[workspace]
members = ["crates/publish_lib", "crates/cli"]
resolver = "2"

[workspace.package]
version = "0.15.0"
edition = "2024"
authors = ["The Tari Development Community"]
repository = "https://github.com/tari-project/tari-cli"
license = "BSD-3-Clause"

[workspace.dependencies]
tari_ootle_publish_lib = { path = "crates/publish_lib", version = "0.15" }

tokio = { version = "1.41.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.12"
url = { version = "2.5.3", features = ["default", "serde"] }

tari_ootle_walletd_client = "0.29"
tari_engine = "0.28"
tari_engine_types = "0.28"
tari_ootle_common_types = "0.28"
tari_template_lib_types = "0.25"
tari_ootle_template_metadata = "0.5"
