[package]
name = "tari-ootle-cli"
description = "Tari Ootle Template Development CLI"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "tari"
path = "src/main.rs"

[dependencies]
tari_ootle_publish_lib = { workspace = true }
tari_ootle_template_metadata = { workspace = true, features = ["json"] }
tari_ootle_common_types = { workspace = true }
tari_engine_types = { workspace = true }

anyhow = "1.0.102"
cargo-generate = "^0.23.7"
cargo_toml = "0.22.3"
clap = { version = "4.5.20", features = ["derive", "string"] }
convert_case = "0.11.0"
dialoguer = { version = "0.12.0", features = ["default", "fuzzy-select"] }
dirs-next = "2.0.0"
git2 = { version = "^0.20", features = ["default"] }
human_bytes = "0.4.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { workspace = true }
serde_json = "1.0"
spinners = "4.1.1"
termimad = "0.34.1"
thiserror = { workspace = true }
tokio = { workspace = true }
toml = "1.1.2"
toml_edit = "0.25"
url = { workspace = true }

[dev-dependencies]
tempfile = "3"

[features]
default = ["wasm-opt"]
wasm-opt = ["tari_ootle_publish_lib/wasm-opt"]