[package]
name = "tari_ootle_publish_lib"
description = "Tari Ootle Template publishing library"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_ootle_walletd_client = { workspace = true }
tari_ootle_common_types = { workspace = true }
tari_engine = { workspace = true }
tari_engine_types = { workspace = true }
tari_template_lib_types = { workspace = true }
tari_ootle_template_metadata = { workspace = true }
tari_ootle_wallet_sdk = "0.28.9"
ootle_serde = { version = "0.2", features = ["hex"] }

tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
serde = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

hickory-proto = "=0.26.0-beta.3"
tonic = { version = "0.12.3", features = ["tls"] }

[package.metadata.cargo-machete]
ignored = ["hickory-proto"]
