[package]
name = "tari_ootle_publish_lib"
description = "Tari Ootle Template publishing library"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_ootle_walletd_client = { workspace = true }
tari_ootle_common_types = { workspace = true }
tari_engine = { workspace = true }
tari_engine_types = { workspace = true }
tari_template_lib_types = { workspace = true }
tari_ootle_template_metadata = { workspace = true }
tari_ootle_wallet_sdk = { workspace = true }
ootle_serde = { workspace = true, features = ["hex"] }

tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
serde = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }
wasm-opt = { workspace = true, optional = true }

hickory-proto = "=0.26.0"
tonic = { version = "0.12.3", features = ["tls"] }
tempfile = "3.27.0"

[package.metadata.cargo-machete]
ignored = ["hickory-proto"]

[features]
wasm-opt = ["dep:wasm-opt", "tokio/fs"]