[package]
name = "tari_deploy"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
minotari_app_grpc = { git = "https://github.com/tari-project/tari.git", branch = "feature-dan2" }
tari_common_types = { workspace = true }
tari_core = { workspace = true }
tari_wallet_daemon_client = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_dan_engine = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_engine_types = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_template_lib = { git = "https://github.com/tari-project/tari-dan.git", branch = "development" }
tari_utilities = { git = "https://github.com/tari-project/tari-dan.git", branch = "development", features = ["default", "serde"] }

tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
serde = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

hickory-proto = "=0.25.0-alpha.2"
tonic = { version = "0.12.3", features = ["tls"] }
reqwest = { version = "0.12.9", features = ["default", "multipart", "stream", "json"] }
async-trait = "0.1.83"
