[package]
name = "tari_deploy"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tari_wallet_daemon_client = { workspace = true }
tari_dan_engine = { workspace = true }
tari_engine_types = { workspace = true }
tari_template_lib = { workspace = true }

tokio = { workspace = true, features = ["rt", "rt-multi-thread", "macros"] }
serde = { workspace = true }
thiserror = { workspace = true }
url = { workspace = true }

hickory-proto = "=0.25.0-alpha.2"
tonic = { version = "0.12.3", features = ["tls"] }

[package.metadata.cargo-machete]
ignored = ["hickory-proto"]
